Code clean up and readme added